--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-fmaily:"Comfortaa";
+    font-family:"Comfortaa";
     font-size:35pt;
 }
 
@@ -28,7 +28,7 @@ header {
 /* BIo Section*/
 
 #bio {
-    text: align 200px;
+    text-align: 200px;
     background-color: red;
     color:blue;
 }
