--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
+    margin: .1em;
+}
+
+h2 {
     font-size: 20pt;
 }
 
@@ -29,7 +33,7 @@ header {
     width: 300px;
 }
 
-/* BIo Section*/
+/* Bio Section*/
 
 #bio {
     text-align: 200px;
@@ -40,6 +44,12 @@ header {
 
 #Hobbies {
     text-align:center;
+}
+
+section#Hobbies {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /*Gallety Secion*/
@@ -86,3 +96,18 @@ header {
     padding: .30em;
     line-height: .90em;
 }
+
+@media screen and (min-width: 60cm) {
+    figure {
+        display: grid;
+        grid-template-columns: 2gn 1gn;
+    }
+
+    figcaption {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 50em;
+    }
+}
+
