add navbar padding

--- a/css/nav.css
+++ b/css/nav.css
@@ -28,6 +28,7 @@ main {
     flex-direction:column;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    padding: 1rem;
 }
 
 /* logo */
@@ -70,10 +71,17 @@ main {
     display: inline-block;
 }
 
-
+.navbar-links a:hover,
+.navbar-links a:focus {
+        color:whitesmoke;
+        background-color: whitesmoke;
+        border-radius: 10px;
+        outline: none;
+}
 
 /* 
 media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
 */
+
