--- a/css/nav.css
+++ b/css/nav.css
@@ -63,7 +63,7 @@ main {
 
 .navbar-links a {
     color: whitesmoke;
-    background-attachment: #333;
+    background-attachment: black;
     font-size: 1.5em;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
@@ -101,4 +101,8 @@ such that no text wraps
         display: flex;
         justify-content: space-between;
     }
+}
+
+.navbar-links a {
+    float:right;
 }
